# memo-notes-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/app/: main.py
src/app/routers/: notes.py
tests/: test_notes.py
