[tool.poetry]
name = "memo-notes-api"
version = "0.1.0"
description = "Notes CRUD API using FastAPI, Uvicorn, Taskipy, Pytest, and Ruff (in-memory storage)."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "app", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
fastapi = "^0.115.4"
uvicorn = "^0.30.6"  # no [standard] extras; avoids uvloop/httptools on 3.14
pydantic = "^2.9.2"
taskipy = "^1.12.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
httpx = "^0.27.2"
ruff = "^0.6.9"
pytest-cov = "^5.0.0"
watchgod = "^0.8.2"  # pure-Python reloader fallback that works on 3.14

[tool.taskipy.tasks]
list = "python -c 'print(\"dev, lint, fmt, test, cov\")'"
dev = "PYTHONPATH=src uvicorn app.main:app --reload"
lint = "ruff check ."
fmt = "ruff check --select I --fix . && ruff format ."
test = "pytest -q"
cov = "pytest --cov=app --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
